--- a/packages/zerobias/ngx-example/package.json
+++ b/packages/zerobias/ngx-example/package.json
@@ -16,7 +16,7 @@
     "@angular/platform-browser": "~17.1.3",
     "@angular/platform-browser-dynamic": "~17.1.3",
     "@angular/router": "~17.1.3",
-    "@auditlogic/module-github-github": "6.3.10",
+    "@auditlogic/module-github-github-client-ts": "^6.3.11-rc.7",
     "@auditlogic/module-auditmation-interface-fileproducer": "^0.3.6",
     "@auditmation/module-auditmation-auditmation-cardservice": "^2.2.1",
     "@auditmation/module-auditmation-auditmation-dana": "^5.10.10",
@@ -31,7 +31,7 @@
     "@auditmation/platform-workflow-util": "^0.1.4",
     "@auditmation/types-amazon-js": "^4.1.0",
     "@auditmation/types-core-js": "^4.8.0",
-    "@auditmation/ngx-zb-client-lib": "^0.0.27",
+    "@auditmation/ngx-zb-client-lib": "^0.0.30",
     "axios": "^0.27.2",
     "rxjs": "~6.6.7",
     "tslib": "^2.3.0",
