--- a/package/zerobias/ngx-example/package.json
+++ b/package/zerobias/ngx-example/package.json
@@ -16,7 +16,7 @@
     "@angular/platform-browser": "~17.1.3",
     "@angular/platform-browser-dynamic": "~17.1.3",
     "@angular/router": "~17.1.3",
-    "@auditlogic/module-github-github-client-ts": "^6.3.11-rc.7",
+    "@auditlogic/module-github-github-client-ts": "^6.3.11",
     "@auditlogic/module-auditmation-interface-fileproducer": "^0.3.6",
     "@auditmation/module-auditmation-auditmation-cardservice": "^2.2.1",
     "@auditmation/module-auditmation-auditmation-dana": "^5.10.10",
