--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,7 @@ jobs:
       S3_BUCKET: ${{ github.event.inputs.s3-bucket }}
       ZB_TOKEN : ${{ secrets.ZB_TOKEN }}
 
+    steps:
       - name: import secrets
         uses: hashicorp/vault-action@v2.4.3
         with:
@@ -50,7 +51,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Deploy app
-        uses: zerobias-org/devops/actions/static-s3-app-release@main
+        uses: zerobias-org/devops/actions/static-s3-app-release@feature/app-ci-test
         with:
           app-name: ${{ env.APP_NAME }}
           app-base-path: package
