--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -20,29 +20,19 @@ jobs:
         run: |
           BRANCH=${GITHUB_REF##*/}
           echo "BRANCH_NAME=$BRANCH" >> $GITHUB_ENV
-          
+
           if [[ "$BRANCH" == "main" ]]; then
             echo "ENV_NAME=prod" >> $GITHUB_ENV
             echo "AWS_ACCOUNT_NAME=prod" >> $GITHUB_ENV
             echo "DNS_HOST=app" >> $GITHUB_ENV
           else
-            echo "DNS_HOST=qa" >> $GITHUB_ENV
-          
+            echo "ENV_NAME=$BRANCH" >> $GITHUB_ENV
+            echo "AWS_ACCOUNT_NAME=dev" >> $GITHUB_ENV
             if [[ "$BRANCH" == "dev" ]]; then
               echo "DNS_HOST=ci" >> $GITHUB_ENV
+            else
+              echo "DNS_HOST=qa" >> $GITHUB_ENV
             fi
-          
-            echo "ENV_NAME=$BRANCH" >> $GITHUB_ENV
-            echo "AWS_ACCOUNT_NAME=dev" >> $GITHUB_ENV
-          fi
-          
-          
-          if [[ "$BRANCH" == "main" ]]; then
-            echo "ENV_NAME=prod" >> $GITHUB_ENV
-            echo "AWS_ACCOUNT_NAME=prod" >> $GITHUB_ENV
-          else
-            echo "ENV_NAME=$BRANCH" >> $GITHUB_ENV
-            echo "AWS_ACCOUNT_NAME=dev" >> $GITHUB_ENV
           fi
 
       - name: Import secrets
@@ -72,16 +62,17 @@ jobs:
       - name: Debug changed outputs
         shell: bash
         run: |
-          echo "🔎 Changed app directories: ${{ steps.changed.outputs.all_modified_files }}"
+          echo "🔎 Changed app directories:"
+          echo "${{ steps.changed.outputs.dir_names }}"
 
       - name: Dispatch deploy workflow for each app
         shell: bash
         run: |
           set -x
           export GH_TOKEN="${{ secrets.GITHUB_TOKEN }}"
-          IFS=',' read -ra APPS <<< "${{ steps.changed.outputs.dir_names }}"
+          readarray -t APPS <<< "${{ steps.changed.outputs.dir_names }}"
 
-          if [ -z "${APPS[*]}" ]; then
+          if [ "${#APPS[@]}" -eq 0 ]; then
             echo "✅ No apps changed, skipping deploy."
             exit 0
           fi
@@ -114,4 +105,3 @@ jobs:
           AWS_ACCOUNT_ID: ${{ env.AWS_ACCOUNT_ID }}
           BUCKET_ENV: ${{ env.DNS_HOST }}
           GITHUB_REF_NAME: ${{ github.ref_name }}
-          CHANGED_APPS: ${{ steps.changed.outputs.dir_names }}
