--- a/package/zerobias/ngx-example/.npmrc
+++ b/package/zerobias/ngx-example/.npmrc
@@ -1,5 +1,4 @@
-@auditmation:registry=https://pkg.zerobias.org
-@auditlogic:registry=https://pkg.zerobias.org
-@zerobias-org:registry=https://pkg.zerobias.org
-//pkg.zerobias.org/:always-auth=true
-//pkg.zerobias.org/:_authToken=${ZB_TOKEN}
+@auditmation:registry=https://npm.pkg.github.com/
+@auditlogic:registry=https://npm.pkg.github.com/
+//npm.pkg.github.com/:always-auth=true
+//npm.pkg.github.com/:_authToken=${GITHUB_TOKEN}
