--- a/package/zerobias/ngx-example/package.json
+++ b/package/zerobias/ngx-example/package.json
@@ -13,25 +13,15 @@
     "@angular/compiler": "~17.1.3",
     "@angular/core": "~17.1.3",
     "@angular/forms": "~17.1.3",
+    "@angular-devkit/schematics": "~17.1.4",
+    "@angular/animations": "~17.1.3",
+    "@angular/cdk": "~17.1.2",
+    "@angular/material": "~17.1.2",
     "@angular/platform-browser": "~17.1.3",
     "@angular/platform-browser-dynamic": "~17.1.3",
     "@angular/router": "~17.1.3",
-    "@auditlogic/module-github-github-client-ts": "^6.3.11",
-    "@auditlogic/module-auditmation-interface-fileproducer": "^0.3.13",
-    "@auditmation/module-auditmation-auditmation-cardservice": "^2.2.10",
-    "@auditmation/module-auditmation-auditmation-dana": "^5.12.57",
-    "@auditmation/module-auditmation-auditmation-events": "^3.37.39",
-    "@auditmation/module-auditmation-auditmation-fileservice": "^1.5.7",
-    "@auditmation/module-auditmation-auditmation-graphql": "^2.17.39",
-    "@auditmation/module-auditmation-auditmation-hub": "^3.12.95",
-    "@auditmation/module-auditmation-auditmation-platform": "^3.46.39",
-    "@auditmation/module-auditmation-auditmation-portal": "^2.28.38",
-    "@auditmation/module-auditmation-auditmation-store": "^2.16.249",
-    "@auditmation/platform-query-builder": "^2.18.39",
-    "@auditmation/platform-workflow-util": "^0.18.249",
-    "@auditmation/types-amazon-js": "^4.2.8",
-    "@auditmation/types-core-js": "^4.9.5",
-    "@auditmation/ngx-zb-client-lib": "^0.0.33",
+    "@auditlogic/module-github-github-client-ts": "^6.5.2",
+    "@auditmation/ngx-zb-client-lib": "^0.5.3",
     "axios": "^0.27.2",
     "rxjs": "~6.6.7",
     "tslib": "^2.3.0",
