chore: update package.json

--- a/package/zerobias/example-angular/package.json
+++ b/package/zerobias/example-angular/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "example-ngx",
-  "version": "0.1.2",
+  "name": "example-angular",
+  "version": "0.1.3",
   "license": "MIT",
   "scripts": {
     "start": "nx serve",
