--- a/package/zerobias/example-angular/package.json
+++ b/package/zerobias/example-angular/package.json
@@ -42,6 +42,7 @@
     "@nx/angular": "20.6.1",
     "@nx/eslint": "18.0.7",
     "@nx/eslint-plugin": "20.6.1",
+    "@nx/nx-linux-x64-gnu": "21.0.3",
     "@nx/js": "20.6.1",
     "@nx/web": "20.6.1",
     "@nx/workspace": "20.6.1",
