--- a/package/zerobias/example-angular/project.json
+++ b/package/zerobias/example-angular/project.json
@@ -34,7 +34,7 @@
             {
               "type": "anyComponentStyle",
               "maximumWarning": "6kb",
-              "maximumError": "10kb"
+              "maximumError": "128mb"
             }
           ],
           "outputHashing": "all"
