--- a/package/zerobias/example-angular/project.json
+++ b/package/zerobias/example-angular/project.json
@@ -11,7 +11,7 @@
       "executor": "@angular-devkit/build-angular:browser",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/ngx-example",
+        "outputPath": "dist",
         "index": "./src/index.html",
         "main": "./src/main.ts",
         "polyfills": ["zone.js"],
