--- a/package/zerobias/example-angular/package.json
+++ b/package/zerobias/example-angular/package.json
@@ -1,10 +1,10 @@
 {
   "name": "example-angular",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "license": "MIT",
   "scripts": {
     "start": "nx serve",
-    "build": "nx build",
+    "build": "nx build --prod --base-href /example-angular/",
     "test": "nx test"
   },
   "private": true,
