--- a/package/zerobias/example-nextjs/package.json
+++ b/package/zerobias/example-nextjs/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@zerobias-org/cybercommand-app",
-  "version": "0.1.1",
+  "name": "example-nextjs",
+  "version": "0.1.3",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,16 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auditmation/zb-client-lib-js": "^0.2.9",
+    "@auditmation/zb-client-lib-js": "^0.5.6",
+    "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-slot": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "http-proxy": "^1.18.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.503.0",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.2.0"
+    "react-hook-form": "^7.56.2",
+    "tailwind-merge": "^3.2.0",
+    "zod": "^3.25.28"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -29,6 +33,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
+    "sass": "^1.89.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.2.8",
     "typescript": "^5"
