--- a/package/zerobias/example-nextjs/package.json
+++ b/package/zerobias/example-nextjs/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "example-nextjs",
-  "version": "0.1.3",
+  "name": "example-nextjs-new",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,33 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auditmation/zb-client-lib-js": "^0.5.6",
-    "@radix-ui/react-label": "^2.1.6",
-    "@radix-ui/react-slot": "^1.2.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "http-proxy": "^1.18.1",
-    "js-cookie": "^3.0.5",
-    "lucide-react": "^0.503.0",
-    "next": "15.2.4",
+    "@auditmation/zb-client-lib-js": "^0.5.9",
+    "@auditlogic/module-github-github-client-ts": "^6.5.2",
+    "material-symbols": "^0.31.4",
+    "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.56.2",
-    "tailwind-merge": "^3.2.0",
-    "zod": "^3.25.28"
+    "react-select": "^5.10.1",
+    "react-tabs": "^6.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "eslint": "^9",
-    "eslint-config-next": "15.2.4",
+    "eslint-config-next": "15.3.2",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "sass": "^1.89.0",
-    "tailwindcss": "^4",
-    "tw-animate-css": "^1.2.8",
     "typescript": "^5"
   }
 }
