--- a/package/zerobias/example-nextjs/package.json
+++ b/package/zerobias/example-nextjs/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "example-nextjs-new",
-  "version": "0.1.0",
+  "name": "example-nextjs",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
