chore: many updates

--- a/package/zerobias/example-nextjs/package.json
+++ b/package/zerobias/example-nextjs/package.json
@@ -1,10 +1,12 @@
 {
   "name": "example-nextjs",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "cp ./next.config.default.ts ./next.config.ts && next dev",
+    "build:dev": "cp ./next.config.dev.ts ./next.config.ts &&n ext build",
+    "build:qa": "cp ./next.config.qa.ts ./next.config.ts && next build",
+    "build:prod": "cp ./next.config.prod.ts ./next.config.ts && next build",
     "start": "next start",
     "lint": "next lint"
   },
