--- a/package/zerobias/data-explorer/.npmrc
+++ b/package/zerobias/data-explorer/.npmrc
@@ -1,7 +1,5 @@
-@auditmation:registry=https://npm.pkg.github.com/
-@auditlogic:registry=https://npm.pkg.github.com/
+@auditmation:registry=https://pkg.zerobias.org
+@auditlogic:registry=https://pkg.zerobias.org
 @zerobias-org:registry=https://pkg.zerobias.org
-//npm.pkg.github.com/:always-auth=true
-//npm.pkg.github.com/:_authToken=${NPM_TOKEN}
 //pkg.zerobias.org/:always-auth=true
 //pkg.zerobias.org/:_authToken=${ZB_TOKEN}
