--- a/package/zerobias/data-explorer/package.json
+++ b/package/zerobias/data-explorer/package.json
@@ -9,7 +9,7 @@
     "build:dev": "cp ./next.config.dev.ts ./next.config.ts && next build",
     "build:qa": "cp ./next.config.qa.ts ./next.config.ts && next build",
     "build:prod": "cp ./next.config.prod.ts ./next.config.ts && next build",
-    "build": "next build",
+    "build": "cp ./next.config.prod.ts ./next.config.ts && next build",
     "start": "next start",
     "start:standalone": "node server.js",
     "lint": "next lint"
